app/global.css
@import "tailwindcss";

@theme {
	--container-padding: 0.25rem;

	--default-font-family: var(--font-poppins);

	--color-*: initial;
	--color-white: #ffffff;
	--color-black: #000000;
	--color-gray: #e6e6e6;
	--color-blue: #0360e7;

	--height-line: 0.5px;
}

@layer base {
	html,
	body {
		@apply bg-black text-white h-full w-full;
	}
}

@layer components {
	.highlighted-title-text {
		@apply bg-gray bg-clip-text;
		background: linear-gradient(246.35deg, #0360E7 55.32%, #023f9a 80.85%);
		background-clip: text;
		-webkit-background-clip: text;
		-webkit-text-fill-color: transparent;
	}

	.gradient-hero-title {
		@apply bg-gray bg-clip-text;
		background: linear-gradient(180deg, #FFFFFF 0%, #000000 302%);
		background-clip: text;
		-webkit-background-clip: text;
		-webkit-text-fill-color: transparent;
	}
}

.gradient-border {
	@apply rounded-xl border border-gray;
	border-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='500' height='500' fill='none'%3e%3crect width='499' height='499' x='.5' y='.5' stroke='url(%23a)' stroke-opacity='.4' rx='11.5'/%3e%3crect width='499' height='499' x='.5' y='.5' stroke='url(%23b)' stroke-opacity='.4' rx='11.5'/%3e%3cdefs%3e%3clinearGradient id='a' x1='250' x2='250' y1='0' y2='98.958' gradientUnits='userSpaceOnUse'%3e%3cstop stop-color='%23B3D2FE'/%3e%3cstop offset='1' stop-color='%23B3D2FE' stop-opacity='.075'/%3e%3c/linearGradient%3e%3clinearGradient id='b' x1='250' x2='250' y1='0' y2='927.5' gradientUnits='userSpaceOnUse'%3e%3cstop stop-color='%23B3D2FE'/%3e%3cstop offset='1' stop-color='%23B3D2FE' stop-opacity='0'/%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e") 12 / 12px stretch;
}

.pill-border {
	@apply rounded-full border border-gray;
	border-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='19998' height='19998' fill='none'%3e%3crect width='19997' height='19997' x='.5' y='.5' stroke='url(%23a)' stroke-opacity='.4' rx='9998.5'/%3e%3crect width='19997' height='19997' x='.5' y='.5' stroke='url(%23b)' stroke-opacity='.4' rx='9998.5'/%3e%3cdefs%3e%3clinearGradient id='a' x1='9999' x2='9999' y1='0' y2='3957.94' gradientUnits='userSpaceOnUse'%3e%3cstop stop-color='%23B3D2FE'/%3e%3cstop offset='1' stop-color='%23B3D2FE' stop-opacity='.075'/%3e%3c/linearGradient%3e%3clinearGradient id='b' x1='9999' x2='9999' y1='0' y2='37096.3' gradientUnits='userSpaceOnUse'%3e%3cstop stop-color='%23B3D2FE'/%3e%3cstop offset='1' stop-color='%23B3D2FE' stop-opacity='0'/%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e") 9999 / 9999px stretch;
}

.divider-gradient {
	@apply h-line w-full;
	background: linear-gradient(90deg, rgba(169, 157, 195, 0.4) 0%, rgba(169, 157, 195, 0.08) 98.39%);
}

.active-divider-gradient {
	@apply h-line w-full;
	background: linear-gradient(90deg, #0360E7 47.08%, rgba(3, 96, 231, 0) 94.16%);
}

/* .container {
	@apply mx-auto w-full;
	padding-left: var(--container-padding);
	padding-right: var(--container-padding);
} */

/* @media (min-width: 640px) {
	.container {
		max-width: 640px;
	}
}
@media (min-width: 768px) {
	.container {
		max-width: 768px;
	}
}
@media (min-width: 1024px) {
	.container {
		max-width: 1024px;
	}
}
@media (min-width: 1280px) {
	.container {
		max-width: 1280px;
	}
} */

::-webkit-scrollbar {
    display: none;
}

body, html {
    overflow: -moz-scrollbars-none;
    -ms-overflow-style: none;
    scrollbar-width: none;
	width: 100vw;
	overflow-x: hidden;
}

